# swagger/v1/swagger.yaml
@@ -77,7 +77,7 @@ paths:
                   properties:
                     id:
                       type: integer
-                    ballance:
+                    balance:
                       type: string
                     coin_id:
                       type: integer
@@ -122,6 +122,8 @@ paths:
                       type: integer
                     name:
                       type: string
+                    acronym:
+                      type: string
                     created_at:
                       type: datetime
                     updated_at:
@@ -142,8 +144,11 @@ paths:
               properties:
                 name:
                   type: string
+                acronym:
+                  type: string
               required:
               - name
+              - acronym
   "/api/v1/operations":
     post:
       summary: create operation
@@ -170,8 +175,10 @@ paths:
                 coin_id:
                   type: integer
               required:
-              - wallet_id
+              - wallet_origin_id
+              - wallet_destination_id
               - coin_id
+              - kind
     get:
       summary: list operations
       tags:
